[workspace]
resolver = "2"

members = [
    "packages/core",
    "packages/example"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
burn = { version = "0.14", features = ["candle", "cuda-jit", "ndarray", "tch"] }
burn-import = { version = "0.14", features = [] }